四十六、在Go二进制文件中嵌入前端代码
