# doc/swagger/simple_bank.swagger.json
@@ -1,8 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "rpc_create_user.proto",
-    "version": "version not set"
+    "title": "Simple Bank API",
+    "version": "1.1",
+    "contact": {
+      "name": "GrayJunZi",
+      "url": "https://github.com/grayjunzi"
+    }
   },
   "tags": [
     {
@@ -18,6 +22,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -50,6 +56,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login user",
+        "description": "Use this API to login user and get access token \u0026 refresh token",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
